# streamer-template

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  config.json  docker-compose.yml
.github/workflows/: rust.yml
devops/grafana/: streamer-template-dashboard.json
devops/prometheus/: prometheus.yml
doc/: 00_system_introduction.md  01_streaming_api_design.md  02_audio_decoding.md  03_audio_decoding.md  03_initial_building_blocks.md  03_the_model.md  04_axum_api.md  system_introduction.md  xx_batching_for_performance.md  xx_metrics_for_streaming_audio_APIs.md
doc/diagrams/: basic_system.excalidraw
doc/scripts/: xcorr_demo.py
src/: actix_server.rs  api_types.rs  audio.rs  axum_server.rs  lib.rs  logging.rs  main.rs  metrics.rs  model.rs  task.rs  util.rs
tools/: README.md  hello.py  pyproject.toml
tools/src/: generate_fake_data.py
